Switching to more vim-inspired theme attributes

--- a/rtv/themes/solarized-light.cfg
+++ b/rtv/themes/solarized-light.cfg
@@ -19,53 +19,51 @@
 
 [theme]
 ;<element>            = <foreground>  <background>  <attributes>
-@normal               = ansi_241      ansi_230      normal
-@highlight            = ansi_241      ansi_254      normal
+Normal                = ansi_241      ansi_230      -
+Selected              = ansi_241      ansi_254      -
+SelectedCursor        = ansi_241      ansi_254      reverse
 
-bar_level_1           = ansi_125      -
-bar_level_1.highlight = ansi_125      -             reverse
-bar_level_2           = ansi_160      -
-bar_level_2.highlight = ansi_125      -             reverse
-bar_level_3           = ansi_61       -
-bar_level_3.highlight = ansi_125      -             reverse
-bar_level_4           = ansi_37       -
-bar_level_4.highlight = ansi_125      -             reverse
-comment_author        = ansi_33       -             bold
-comment_author_self   = ansi_64       -             bold
-comment_count         = -             -
-comment_text          = -             -
-created               = -             -
-cursor                = -             -
-cursor.highlight      = ansi_245      -             reverse
-downvote              = ansi_160      -             bold
-gold                  = ansi_136      -             bold
-help_bar              = ansi_37       -             bold+reverse
-hidden_comment_expand = ansi_245      -             bold
-hidden_comment_text   = ansi_245      -
-multireddit_name      = ansi_240      -             bold
-multireddit_text      = ansi_245      -
-neutral_vote          = -             -             bold
-notice_info           = -             -             bold
-notice_loading        = -             -             bold
-notice_error          = ansi_160      -             bold
-notice_success        = ansi_64       -             bold
-nsfw                  = ansi_125      -             bold+reverse
-order_bar             = ansi_245      -             bold
-order_bar.highlight   = ansi_245      -             bold+reverse
-prompt                = ansi_33       -             bold+reverse
-saved                 = ansi_125      -
-score                 = -             -
-separator             = -             -             bold
-stickied              = ansi_136      -
-subscription_name     = ansi_240      -             bold
-subscription_text     = ansi_245      -
-submission_author     = ansi_64       -             bold
-submission_flair      = ansi_160      -
-submission_subreddit  = ansi_166      -
-submission_text       = -             -
-submission_title      = ansi_240      -             bold
-title_bar             = ansi_37       -             bold+reverse
-upvote                = ansi_64       -             bold
-url                   = ansi_33       -             underline
-url_seen              = ansi_61       -             underline
-user_flair            = ansi_136      -             bold
+PageTitle             = ansi_37       -             bold+reverse
+PageOrder             = ansi_245      -             bold
+PageOrderHighlight    = ansi_245      -             bold+reverse
+Help                  = ansi_37       -             bold+reverse
+Prompt                = ansi_33       -             bold+reverse
+NoticeInfo            = -             -             bold
+NoticeLoading         = -             -             bold
+NoticeError           = ansi_160      -             bold
+NoticeSuccess         = ansi_64       -             bold
+
+CursorBlock           = ansi_245      -             -
+CursorBar1            = ansi_125      -             -
+CursorBar2            = ansi_160      -             -
+CursorBar3            = ansi_61       -             -
+CursorBar4            = ansi_37       -             -
+
+CommentAuthor         = ansi_33       -             bold
+CommentAuthorSelf     = ansi_64       -             bold
+CommentCount          = -             -             -
+CommentText           = -             -             -
+Created               = -             -             -
+Downvote              = ansi_160      -             bold
+Gold                  = ansi_136      -             bold
+HiddenCommentExpand   = ansi_245      -             bold
+HiddenCommentText     = ansi_245      -             -
+MultiredditName       = ansi_240      -             bold
+MultiredditText       = ansi_245      -             -
+NeutralVote           = -             -             bold
+NSFW                  = ansi_125      -             bold+reverse
+Saved                 = ansi_125      -             -
+Score                 = -             -             -
+Separator             = -             -             bold
+Stickied              = ansi_136      -             -
+SubscriptionName      = ansi_240      -             bold
+SubscriptionText      = ansi_245      -             -
+SubmissionAuthor      = ansi_64       -             bold
+SubmissionFlair       = ansi_160      -             -
+SubmissionSubreddit   = ansi_166      -             -
+SubmissionText        = -             -             -
+SubmissionTitle       = ansi_240      -             bold
+Upvote                = ansi_64       -             bold
+Link                  = ansi_33       -             underline
+LinkSeen              = ansi_61       -             underline
+UserFlair             = ansi_136      -             bold
