Refactoring and adding some new themes

--- a/rtv/themes/high_contrast.cfg
+++ b/rtv/themes/high_contrast.cfg
@@ -20,7 +20,7 @@ CursorBar2            = cyan          -             -
 CursorBar3            = green         -             -
 CursorBar4            = yellow        -             -
 
-CommentAuthor         = blue          -             bold
+CommentAuthor         = cyan          -             bold
 CommentAuthorSelf     = green         -             bold
 CommentCount          = -             -             -
 CommentText           = -             -             -
@@ -45,6 +45,6 @@ SubmissionSubreddit   = yellow        -             -
 SubmissionText        = -             -             -
 SubmissionTitle       = -             -             bold
 Upvote                = green         -             bold
-Link                  = blue          -             underline
+Link                  = cyan          -             underline
 LinkSeen              = magenta       -             underline
 UserFlair             = yellow        -             bold
