--- a/rtv/themes/solarized-dark.cfg
+++ b/rtv/themes/solarized-dark.cfg
@@ -23,10 +23,10 @@ Normal                = ansi_244      ansi_234      -
 Selected              = ansi_244      ansi_235      -
 SelectedCursor        = ansi_244      ansi_235      bold+reverse
 
-PageTitle             = ansi_37       -             bold+reverse
-PageOrder             = ansi_240      -             bold
-PageOrderHighlight    = ansi_240      -             bold+reverse
-Help                  = ansi_37       -             bold+reverse
+TitleBar              = ansi_37       -             bold+reverse
+OrderBar              = ansi_245      -             bold
+OrderBarHighlight     = ansi_245      -             bold+reverse
+HelpBar               = ansi_37       -             bold+reverse
 Prompt                = ansi_33       -             bold+reverse
 NoticeInfo            = -             -             bold
 NoticeLoading         = -             -             bold
@@ -46,18 +46,18 @@ CommentText           = -             -             -
 Created               = -             -             -
 Downvote              = ansi_160      -             bold
 Gold                  = ansi_136      -             bold
-HiddenCommentExpand   = ansi_245      -             bold
-HiddenCommentText     = ansi_245      -             -
-MultiredditName       = ansi_240      -             bold
-MultiredditText       = ansi_245      -             -
+HiddenCommentExpand   = ansi_240      -             bold
+HiddenCommentText     = ansi_240      -             -
+MultiredditName       = ansi_245      -             bold
+MultiredditText       = ansi_240      -             -
 NeutralVote           = -             -             bold
-NSFW                  = ansi_125      -             bold+reverse
+NSFW                  = ansi_160      -             bold+reverse
 Saved                 = ansi_125      -             -
 Score                 = -             -             -
 Separator             = -             -             bold
 Stickied              = ansi_136      -             -
-SubscriptionName      = ansi_240      -             bold
-SubscriptionText      = ansi_245      -             -
+SubscriptionName      = ansi_245      -             bold
+SubscriptionText      = ansi_240      -             -
 SubmissionAuthor      = ansi_64       -             bold
 SubmissionFlair       = ansi_160      -             -
 SubmissionSubreddit   = ansi_166      -             -
