--- a/rtv/themes/solarized-light.cfg
+++ b/rtv/themes/solarized-light.cfg
@@ -21,12 +21,12 @@
 ;<element>            = <foreground>  <background>  <attributes>
 Normal                = ansi_241      ansi_230      -
 Selected              = ansi_241      ansi_254      -
-SelectedCursor        = ansi_241      ansi_254      reverse
+SelectedCursor        = ansi_241      ansi_254      bold+reverse
 
-PageTitle             = ansi_37       -             bold+reverse
-PageOrder             = ansi_245      -             bold
-PageOrderHighlight    = ansi_245      -             bold+reverse
-Help                  = ansi_37       -             bold+reverse
+TitleBar              = ansi_37       -             bold+reverse
+OrderBar              = ansi_245      -             bold
+OrderBarHighlight     = ansi_245      -             bold+reverse
+HelpBar               = ansi_37       -             bold+reverse
 Prompt                = ansi_33       -             bold+reverse
 NoticeInfo            = -             -             bold
 NoticeLoading         = -             -             bold
@@ -34,10 +34,10 @@ NoticeError           = ansi_160      -             bold
 NoticeSuccess         = ansi_64       -             bold
 
 CursorBlock           = ansi_245      -             -
-CursorBar1            = ansi_125      -             -
-CursorBar2            = ansi_160      -             -
-CursorBar3            = ansi_61       -             -
-CursorBar4            = ansi_37       -             -
+CursorBar1            = ansi_125      -             bold
+CursorBar2            = ansi_160      -             bold
+CursorBar3            = ansi_61       -             bold
+CursorBar4            = ansi_37       -             bold
 
 CommentAuthor         = ansi_33       -             bold
 CommentAuthorSelf     = ansi_64       -             bold
@@ -51,16 +51,16 @@ HiddenCommentText     = ansi_245      -             -
 MultiredditName       = ansi_240      -             bold
 MultiredditText       = ansi_245      -             -
 NeutralVote           = -             -             bold
-NSFW                  = ansi_125      -             bold+reverse
-Saved                 = ansi_125      -             -
+NSFW                  = ansi_160      -             bold+reverse
+Saved                 = ansi_125      -             bold
 Score                 = -             -             -
 Separator             = -             -             bold
-Stickied              = ansi_136      -             -
+Stickied              = ansi_136      -             bold
 SubscriptionName      = ansi_240      -             bold
 SubscriptionText      = ansi_245      -             -
 SubmissionAuthor      = ansi_64       -             bold
-SubmissionFlair       = ansi_160      -             -
-SubmissionSubreddit   = ansi_166      -             -
+SubmissionFlair       = ansi_160      -             bold
+SubmissionSubreddit   = ansi_166      -             bold
 SubmissionText        = -             -             -
 SubmissionTitle       = ansi_240      -             bold
 Upvote                = ansi_64       -             bold
