--- a/rtv/themes/solarized-dark.cfg
+++ b/rtv/themes/solarized-dark.cfg
@@ -20,8 +20,8 @@
 [theme]
 ;<element>            = <foreground>  <background>  <attributes>
 Normal                = ansi_244      ansi_234      -
-Selected              = ansi_244      ansi_235      -
-SelectedCursor        = ansi_244      ansi_235      bold+reverse
+Selected              = -             ansi_235      -
+SelectedCursor        = -             ansi_235      bold+reverse
 
 TitleBar              = ansi_37       -             bold+reverse
 OrderBar              = ansi_245      -             bold
