--- a/rtv/themes/solarized-light.cfg
+++ b/rtv/themes/solarized-light.cfg
@@ -20,8 +20,8 @@
 [theme]
 ;<element>            = <foreground>  <background>  <attributes>
 Normal                = ansi_241      ansi_230      -
-Selected              = ansi_241      ansi_254      -
-SelectedCursor        = ansi_241      ansi_254      bold+reverse
+Selected              = -             ansi_254      -
+SelectedCursor        = -             ansi_254      bold+reverse
 
 TitleBar              = ansi_37       -             bold+reverse
 OrderBar              = ansi_245      -             bold
