Reverting a change to the order of how Selected is applied to themes

--- a/rtv/themes/default.cfg.example
+++ b/rtv/themes/default.cfg.example
@@ -1,8 +1,8 @@
 [theme]
 ;<element>            = <foreground>  <background>  <attributes>
-Normal                = default       default       -
-Selected              = -             -             -
-SelectedCursor        = -             -             reverse
+Normal                = default       default       normal
+Selected              = default       default       normal
+SelectedCursor        = default       default       reverse
 
 TitleBar              = cyan          -             bold+reverse
 OrderBar              = yellow        -             bold
