--- a/rtv/themes/molokai.cfg
+++ b/rtv/themes/molokai.cfg
@@ -23,9 +23,9 @@
 
 [theme]
 ;<element>            = <foreground>  <background>  <attributes>
-Normal                = ansi_252      ansi_234      -
-Selected              = -             ansi_236      -
-SelectedCursor        = -             -             bold+reverse
+Normal                = ansi_252      ansi_234      normal
+Selected              = ansi_252      ansi_236      normal
+SelectedCursor        = ansi_252      ansi_234      bold+reverse
 
 TitleBar              = ansi_81       -             bold+reverse
 OrderBar              = ansi_244      ansi_235      -
