--- a/rtv/themes/papercolor.cfg
+++ b/rtv/themes/papercolor.cfg
@@ -21,9 +21,9 @@
 
 [theme]
 ;<element>            = <foreground>  <background>  <attributes>
-Normal                = ansi_238      ansi_255      -
-Selected              = -             ansi_254      -
-SelectedCursor        = -             -             bold+reverse
+Normal                = ansi_238      ansi_255      normal
+Selected              = ansi_238      ansi_254      normal
+SelectedCursor        = ansi_238      ansi_255      bold+reverse
 
 TitleBar              = ansi_24       -             bold+reverse
 OrderBar              = ansi_25       -             bold
