--- a/rtv/themes/solarized-dark.cfg
+++ b/rtv/themes/solarized-dark.cfg
@@ -19,9 +19,9 @@
 
 [theme]
 ;<element>            = <foreground>  <background>  <attributes>
-Normal                = ansi_244      ansi_234      -
-Selected              = -             ansi_235      -
-SelectedCursor        = -             ansi_235      bold+reverse
+Normal                = ansi_244      ansi_234      normal
+Selected              = ansi_244      ansi_235      normal
+SelectedCursor        = ansi_244      ansi_235      bold+reverse
 
 TitleBar              = ansi_37       -             bold+reverse
 OrderBar              = ansi_245      -             bold
@@ -34,10 +34,10 @@ NoticeError           = ansi_160      -             bold
 NoticeSuccess         = ansi_64       -             bold
 
 CursorBlock           = ansi_240      -             -
-CursorBar1            = ansi_125      -             bold
-CursorBar2            = ansi_160      -             bold
-CursorBar3            = ansi_61       -             bold
-CursorBar4            = ansi_37       -             bold
+CursorBar1            = ansi_125      -             -
+CursorBar2            = ansi_160      -             -
+CursorBar3            = ansi_61       -             -
+CursorBar4            = ansi_37       -             -
 
 CommentAuthor         = ansi_33       -             bold
 CommentAuthorSelf     = ansi_64       -             bold
