Un-bolding the text title for seen submissions

--- a/rtv/themes/default.cfg.example
+++ b/rtv/themes/default.cfg.example
@@ -44,6 +44,7 @@ SubmissionFlair       = red           -             -
 SubmissionSubreddit   = yellow        -             -
 SubmissionText        = -             -             -
 SubmissionTitle       = -             -             bold
+SubmissionTitleSeen   = -             -             -
 Upvote                = green         -             bold
 Link                  = blue          -             underline
 LinkSeen              = magenta       -             underline
