--- a/rtv/themes/molokai.cfg
+++ b/rtv/themes/molokai.cfg
@@ -67,6 +67,7 @@ SubmissionFlair       = ansi_197      -             -
 SubmissionSubreddit   = ansi_222      -             -
 SubmissionText        = -             -             -
 SubmissionTitle       = -             -             bold
+SubmissionTitleSeen   = -             -             -
 Upvote                = ansi_154      -             bold
 Link                  = ansi_67       -             underline
 LinkSeen              = ansi_141      -             underline
