--- a/rtv/themes/papercolor.cfg
+++ b/rtv/themes/papercolor.cfg
@@ -65,6 +65,7 @@ SubmissionFlair       = ansi_162      -             bold
 SubmissionSubreddit   = ansi_166      -             bold
 SubmissionText        = -             -             -
 SubmissionTitle       = -             -             bold
+SubmissionTitleSeen   = -             -             -
 Upvote                = ansi_28       -             bold
 Link                  = ansi_24       -             underline
 LinkSeen              = ansi_91       -             underline
