--- a/rtv/themes/solarized-dark.cfg
+++ b/rtv/themes/solarized-dark.cfg
@@ -63,6 +63,7 @@ SubmissionFlair       = ansi_160      -             -
 SubmissionSubreddit   = ansi_166      -             -
 SubmissionText        = -             -             -
 SubmissionTitle       = ansi_245      -             bold
+SubmissionTitleSeen   = -             -             -
 Upvote                = ansi_64       -             bold
 Link                  = ansi_33       -             underline
 LinkSeen              = ansi_61       -             underline
