--- a/rtv/templates/rtv.cfg
+++ b/rtv/templates/rtv.cfg
@@ -121,6 +121,7 @@ PAGE_UP = m, <KEY_PPAGE>, <NAK>
 PAGE_DOWN = n, <KEY_NPAGE>, <EOT>
 PAGE_TOP = gg
 PAGE_BOTTOM = G
+HIDE = x
 UPVOTE = a
 DOWNVOTE = z
 LOGIN = u
