Fix typo in theme name

--- a/rtv/templates/rtv.cfg
+++ b/rtv/templates/rtv.cfg
@@ -46,7 +46,7 @@ hide_username = False
 ; Color theme, use "rtv --list-themes" to view a list of valid options.
 ; This can be an absolute filepath, or the name of a theme file that has
 ; been installed into either the custom of default theme paths.
-;theme = monokai
+;theme = molokai
 
 ################
 # OAuth Settings
