--- a/rtv/templates/rtv.cfg
+++ b/rtv/templates/rtv.cfg
@@ -16,6 +16,9 @@ ascii = False
 ; Turn on monochrome mode to disable color.
 monochrome = False
 
+; Flash when an invalid action is executed.
+flash = True
+
 ; Enable debugging by logging all HTTP requests and errors to the given file.
 ;log = /tmp/rtv.log
 
