--- a/rtv/themes/solarized-light.cfg
+++ b/rtv/themes/solarized-light.cfg
@@ -53,6 +53,7 @@ MultiredditText       = ansi_245      -             -
 NeutralVote           = -             -             bold
 NSFW                  = ansi_160      -             bold+reverse
 Saved                 = ansi_125      -             bold
+Hidden                = green         -             -
 Score                 = -             -             -
 Separator             = -             -             bold
 Stickied              = ansi_136      -             bold
