--- a/rtv/themes/solarized-dark.cfg
+++ b/rtv/themes/solarized-dark.cfg
@@ -53,6 +53,7 @@ MultiredditText       = ansi_240      -             -
 NeutralVote           = -             -             bold
 NSFW                  = ansi_160      -             bold+reverse
 Saved                 = ansi_125      -             -
+Hidden                = green         -             -
 Score                 = -             -             -
 Separator             = -             -             bold
 Stickied              = ansi_136      -             -
