Fixing hidden tag color to match the shade of green used by the themes

--- a/rtv/themes/papercolor.cfg
+++ b/rtv/themes/papercolor.cfg
@@ -55,7 +55,7 @@ MultiredditText       = ansi_102      -             -
 NeutralVote           = -             -             bold
 NSFW                  = ansi_160      -             bold+reverse
 Saved                 = ansi_31       -             bold
-Hidden                = green         -             -
+Hidden                = ansi_31       -             -
 Score                 = -             -             bold
 Separator             = -             -             bold
 Stickied              = ansi_166      -             bold
