--- a/rtv/themes/molokai.cfg
+++ b/rtv/themes/molokai.cfg
@@ -57,7 +57,7 @@ MultiredditText       = ansi_244      -             -
 NeutralVote           = -             -             bold
 NSFW                  = ansi_197      -             bold+reverse
 Saved                 = ansi_199      -             -
-Hidden                = green         -             -
+Hidden                = ansi_199      -             -
 Score                 = -             -             bold
 Separator             = ansi_241      -             bold
 Stickied              = ansi_208      -             -
