Moving the hide command to the subreddit page

--- a/rtv/templates/rtv.cfg
+++ b/rtv/templates/rtv.cfg
@@ -124,7 +124,6 @@ PAGE_UP = m, <KEY_PPAGE>, <NAK>
 PAGE_DOWN = n, <KEY_NPAGE>, <EOT>
 PAGE_TOP = gg
 PAGE_BOTTOM = G
-HIDE = 0x20
 UPVOTE = a
 DOWNVOTE = z
 LOGIN = u
@@ -155,6 +154,7 @@ SUBREDDIT_OPEN_IN_BROWSER = o, <LF>, <KEY_ENTER>
 SUBREDDIT_OPEN_SUBSCRIPTIONS = s
 SUBREDDIT_OPEN_MULTIREDDITS = S
 SUBREDDIT_FRONTPAGE = p
+SUBREDDIT_HIDE = 0x20
 
 ; Subscription page
 SUBSCRIPTION_SELECT = l, <LF>, <KEY_ENTER>, <KEY_RIGHT>
