--- a/rtv/themes/default.cfg.example
+++ b/rtv/themes/default.cfg.example
@@ -34,7 +34,7 @@ MultiredditText       = -             -             -
 NeutralVote           = -             -             bold
 NSFW                  = red           -             bold+reverse
 Saved                 = green         -             -
-Hidden                = green         -             -
+Hidden                = yellow        -             -
 Score                 = -             -             -
 Separator             = -             -             bold
 Stickied              = green         -             -
