--- a/rtv/themes/solarized-light.cfg
+++ b/rtv/themes/solarized-light.cfg
@@ -53,7 +53,7 @@ MultiredditText       = ansi_245      -             -
 NeutralVote           = -             -             bold
 NSFW                  = ansi_160      -             bold+reverse
 Saved                 = ansi_125      -             bold
-Hidden                = ansi_136      -             -
+Hidden                = ansi_136      -             bold
 Score                 = -             -             -
 Separator             = -             -             bold
 Stickied              = ansi_136      -             bold
