Added an extra sort option for 'gilded'
Implemented 'gilded' sort both in the banner bar (by pushing the '6' key), and in the prompt (by entering '/subreddit/gilded')

--- a/rtv/templates/rtv.cfg
+++ b/rtv/templates/rtv.cfg
@@ -116,6 +116,7 @@ SORT_TOP = 2
 SORT_RISING = 3
 SORT_NEW = 4
 SORT_CONTROVERSIAL = 5
+SORT_GILDED = 6
 MOVE_UP = k, <KEY_UP>
 MOVE_DOWN = j, <KEY_DOWN>
 PREVIOUS_THEME = <KEY_F2>
