Attempt to fix travis yml again

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,8 @@ python:
   - nightly
 matrix:
   allow_failures:
-    python:
-      - nightly
-      - 3.7
+    - python: nightly
+    - python: 3.7
   fast_finish: true
 before_install:
   - pip install --upgrade pip   
