--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ matrix:
     - python: 3.7
       dist: xenial
       sudo: true
+    - python: nightly
+      dist: trusty
 
 before_install:
   - pip install --upgrade pip   
