Add autologin config option and cli parameter

--- a/rtv/templates/rtv.cfg
+++ b/rtv/templates/rtv.cfg
@@ -31,6 +31,9 @@ subreddit = front
 ; Allow rtv to store reddit authentication credentials between sessions.
 persistent = True
 
+; Automatically log in on startup, if credentials are available.
+autologin = True
+
 ; Clear any stored credentials when the program starts.
 clear_auth = False
 
