selftext is viewable before opening submission

--- a/rtv/templates/rtv.cfg
+++ b/rtv/templates/rtv.cfg
@@ -51,6 +51,9 @@ hide_username = False
 ; been installed into either the custom of default theme paths.
 ;theme = molokai
 
+; Display body of self post in subreddit listings
+selftext_preview = True
+
 ################
 # OAuth Settings
 ################
