Add max column width for pager

--- a/rtv/templates/rtv.cfg
+++ b/rtv/templates/rtv.cfg
@@ -46,6 +46,9 @@ enable_media = False
 ; Maximum number of columns for a comment
 max_comment_cols = 120
 
+; Maximum number of columns for pager
+;max_pager_cols = 70
+
 ; Hide username if logged in, display "Logged in" instead
 hide_username = False
 
