Give sort commands more generic sounding names

--- a/rtv/templates/rtv.cfg
+++ b/rtv/templates/rtv.cfg
@@ -117,12 +117,13 @@ imgur_client_id = 93396265f59dec9
 EXIT = q 
 FORCE_EXIT = Q
 HELP = ?
-SORT_HOT = 1
-SORT_TOP = 2
-SORT_RISING = 3
-SORT_NEW = 4
-SORT_CONTROVERSIAL = 5
-SORT_GILDED = 6
+SORT_1 = 1
+SORT_2 = 2
+SORT_3 = 3
+SORT_4 = 4
+SORT_5 = 5
+SORT_6 = 6
+SORT_7 = 7
 MOVE_UP = k, <KEY_UP>
 MOVE_DOWN = j, <KEY_DOWN>
 PREVIOUS_THEME = <KEY_F2>
