Large commit to add support for browsing the inbox

--- a/rtv/templates/rtv.cfg
+++ b/rtv/templates/rtv.cfg
@@ -143,6 +143,9 @@ PROMPT = /
 SAVE = w
 COPY_PERMALINK = y
 COPY_URL = Y
+PRIVATE_MESSAGE = C
+SUBSCRIPTIONS = s
+MULTIREDDITS = S
 
 ; Submission page
 SUBMISSION_TOGGLE_COMMENT = 0x20
@@ -159,11 +162,16 @@ SUBREDDIT_SEARCH = f
 SUBREDDIT_POST = c
 SUBREDDIT_OPEN = l, <KEY_RIGHT>
 SUBREDDIT_OPEN_IN_BROWSER = o, <LF>, <KEY_ENTER>
-SUBREDDIT_OPEN_SUBSCRIPTIONS = s
-SUBREDDIT_OPEN_MULTIREDDITS = S
 SUBREDDIT_FRONTPAGE = p
 SUBREDDIT_HIDE = 0x20
 
 ; Subscription page
 SUBSCRIPTION_SELECT = l, <LF>, <KEY_ENTER>, <KEY_RIGHT>
 SUBSCRIPTION_EXIT = h, s, S, <ESC>, <KEY_LEFT>
+
+; Inbox page
+INBOX_VIEW_CONTEXT = l, <KEY_RIGHT>
+INBOX_OPEN_SUBMISSION = o, <LF>, <KEY_ENTER>
+INBOX_REPLY = c
+INBOX_MARK_READ = w
+INBOX_EXIT = h, <ESC>, <KEY_LEFT>
