--- a/rtv/templates/rtv.cfg
+++ b/rtv/templates/rtv.cfg
@@ -50,7 +50,7 @@ max_comment_cols = 120
 ;max_pager_cols = 70
 
 ; Show the keybinds help bar at the bottom of the screen
-;show_footer = True
+show_footer = True
 
 ; Hide username if logged in, display "Logged in" instead
 hide_username = False
