Add option to force opening links in new browser window

--- a/rtv/templates/rtv.cfg
+++ b/rtv/templates/rtv.cfg
@@ -82,6 +82,9 @@ oauth_scope = edit,history,identity,mysubreddits,privatemessages,read,report,sav
 ; See https://imgur.com/account/settings/apps to generate your own key.
 imgur_client_id = 93396265f59dec9
 
+; Open a new browser window instead of a new tab in existing instance
+force_new_browser_window = False
+
 [bindings]
 ##############
 # Key Bindings
