Add ability to move selected item on top (fixes #683)

--- a/rtv/templates/rtv.cfg
+++ b/rtv/templates/rtv.cfg
@@ -133,6 +133,7 @@ PREVIOUS_THEME = <KEY_F2>
 NEXT_THEME = <KEY_F3>
 PAGE_UP = m, <KEY_PPAGE>, <NAK>
 PAGE_DOWN = n, <KEY_NPAGE>, <EOT>
+FOCUS_UP = -
 PAGE_TOP = gg
 PAGE_BOTTOM = G
 UPVOTE = a
