Add key bindings to open subreddit and user page

--- a/rtv/templates/rtv.cfg
+++ b/rtv/templates/rtv.cfg
@@ -149,6 +149,8 @@ COPY_URL = Y
 PRIVATE_MESSAGE = C
 SUBSCRIPTIONS = s
 MULTIREDDITS = S
+OPEN_SUBREDDIT = v
+OPEN_USERPAGE = V
 
 ; Submission page
 SUBMISSION_TOGGLE_COMMENT = 0x20
