Implement a proper return key (fixes #689)
This PR implements a proper return key as proposed in issue #689.
As a consequence of that, the former (IMO rather complicated) approach
of using the methods `loop` and `handle_selected_page` is replaced
by using a simple page stack to keep track of the currently
selected page. This page stack also defines a maximal size: If
the page stack is full and an additional page is added to the page
stack, the **oldest** entry in the page stack will be removed, so
that the page stack does not exceed the maximal size.

For this new approach, the tests had to be adjusted. Here is a
summary:

Removed tests (no longer needed or replaced by the newly added tests):
 - test_inbox_close
 - test_submission_exit
 - test_subreddit_handle_selected_page
 - test_subreddit_page_loop_pre_select
 - test_subreddit_page_loop
 - test_subscription_close

Modified tests:
 - test_inbox_view_content
 - test_inbox_open_submission
 - test_submission_propmpt
 - test_subreddit_prompt
 - test_subreddit_open
 - test_subreddit_post
 - test_subreddit_open_subscriptions
 - test_subreddit_open_multireddits
 - test_subreddit_frontpage_toggle
 - test_subscription_prompt
 - test_subscription_close
 - test_page_unauthenticated

Added tests:
 - test_page_stack
 - test_page_back_button

--- a/rtv/templates/rtv.cfg
+++ b/rtv/templates/rtv.cfg
@@ -149,12 +149,12 @@ COPY_URL = Y
 PRIVATE_MESSAGE = C
 SUBSCRIPTIONS = s
 MULTIREDDITS = S
+RETURN = h, <KEY_LEFT>
 
 ; Submission page
 SUBMISSION_TOGGLE_COMMENT = 0x20
 SUBMISSION_OPEN_IN_BROWSER = o, <LF>, <KEY_ENTER>
 SUBMISSION_POST = c
-SUBMISSION_EXIT = h, <KEY_LEFT>
 SUBMISSION_OPEN_IN_PAGER = l, <KEY_RIGHT>
 SUBMISSION_OPEN_IN_URLVIEWER = b
 SUBMISSION_GOTO_PARENT = K
@@ -170,11 +170,9 @@ SUBREDDIT_HIDE = 0x20
 
 ; Subscription page
 SUBSCRIPTION_SELECT = l, <LF>, <KEY_ENTER>, <KEY_RIGHT>
-SUBSCRIPTION_EXIT = h, s, S, <ESC>, <KEY_LEFT>
 
 ; Inbox page
 INBOX_VIEW_CONTEXT = l, <KEY_RIGHT>
 INBOX_OPEN_SUBMISSION = o, <LF>, <KEY_ENTER>
 INBOX_REPLY = c
 INBOX_MARK_READ = w
-INBOX_EXIT = h, <ESC>, <KEY_LEFT>
