--- a/rtv/templates/rtv.cfg
+++ b/rtv/templates/rtv.cfg
@@ -70,7 +70,7 @@ force_new_browser_window = False
 ; These settings are defined at https://www.reddit.com/prefs/apps and should
 ; not be altered unless you are defining your own developer application.
 oauth_client_id = E2oEtRQfdfAfNQ
-oauth_client_secret = praw_gapfill
+oauth_client_secret =
 oauth_redirect_uri = http://127.0.0.1:65000/
 
 ; Port that the rtv webserver will listen on. This should match the redirect
